Sonar cloud quality gate tests fixing jacoco